WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268439
[UnifiedPDF] Occasional crashes under IOSurface construction in the web content process
https://bugs.webkit.org/show_bug.cgi?id=268439
Summary
[UnifiedPDF] Occasional crashes under IOSurface construction in the web conte...
Tim Horton
Reported
2024-01-30 23:05:16 PST
[UnifiedPDF] Occasional crashes under IOSurface construction in the web content process
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2024-01-30 23:15:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23563
EWS
Comment 2
2024-01-31 12:11:01 PST
Committed
273848@main
(82c681c6142f): <
https://commits.webkit.org/273848@main
> Reviewed commits have been landed. Closing PR #23563 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-31 12:12:21 PST
<
rdar://problem/122034317
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug